ajouter les modifications

--- a/index.html
+++ b/index.html
@@ -83,4 +83,46 @@
                 </div>
                 <div class="bg-white p-6 rounded-lg shadow hover:shadow-lg">
                     <h3 class="text-xl font-bold text-blue-800 mb-4">Automatisation</h3>
-                    <p
+                    <p></p>
+                    <section id="Certifications" class="py-16 bg-white">
+                        <div class="container mx-auto px-6 text-center">
+                            <h2 class="text-3xl font-bold text-blue-900 mb-12">Mes Certifications</h2>
+                            <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                                <div class="bg-gray-50 p-6 rounded-lg shadow hover:shadow-lg">
+                                    <h3 class="text-xl font-bold text-blue-800 mb-4">PIX</h3>
+                                    <p class="text-gray-600">Certification validant mes compétences numériques dans divers domaines IT.</p>
+                                </div>
+                                <div class="bg-gray-50 p-6 rounded-lg shadow hover:shadow-lg">
+                                    <h3 class="text-xl font-bold text-blue-800 mb-4">SecNumAcademie</h3>
+                                    <p class="text-gray-600">Formation en cybersécurité validée par l'ANSSI.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+
+                    <section id="projects" class="py-16 bg-gray-100">
+                        <div class="container mx-auto px-6 text-center">
+                            <h2 class="text-3xl font-bold text-blue-900 mb-12">Mes projets</h2>
+                            <p class="text-lg text-gray-600">Voici quelques projets sur lesquels j'ai travaillé :</p>
+                            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mt-8">
+                                <div class="bg-white p-6 rounded-lg shadow hover:shadow-lg">
+                                    <h3 class="text-xl font-bold text-blue-800 mb-4">Audit de l'existant</h3>
+                                    <p class="text-gray-600">Évaluation des systèmes existants pour identifier les besoins d'amélioration.</p>
+                                </div>
+                                <div class="bg-white p-6 rounded-lg shadow hover:shadow-lg">
+                                    <h3 class="text-xl font-bold text-blue-800 mb-4">GLPI Helpdesk</h3>
+                                    <p class="text-gray-600">Configuration d'un système de helpdesk pour gérer les tickets d'incidents informatiques.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                    <section id="contact" class="py-16 bg-gray-100">
+                        <div class="container mx-auto px-6 text-center">
+                            <h2 class="text-3xl font-bold text-blue-900 mb-6">Contactez-moi</h2>
+                            <p class="text-gray-600">Pour toute question ou opportunité, n'hésitez pas à me joindre :</p>
+                            <p class="mt-4 text-lg text-gray-800">Email : <a href="mailto:md8118968@gmail.com" class="text-blue-500 hover:underline">md8118968@gmail.com</a></p>
+                            <p class="text-lg text-gray-800">Téléphone : <strong>0605584988</strong></p>
+                        </div>
+                    </section>
+                    
+                       
