ajouter les modifications

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 </div>
                 <div class="bg-white p-6 rounded-lg shadow hover:shadow-lg">
                     <h3 class="text-xl font-bold text-blue-800 mb-4">Automatisation</h3>
-                    <p class="text-gray-600">Développement de scripts pour automatiser des tâches IT (Bash, PowerShell).</p>
+                    <p class="text-gray-600">Création de scripts Bash et PowerShell pour automatiser les tâches administratives.</p>
                 </div>
             </div>
         </div>
@@ -119,10 +119,6 @@
                 <div class="bg-white p-6 rounded-lg shadow hover:shadow-lg">
                     <h3 class="text-xl font-bold text-blue-800 mb-4">GLPI Helpdesk</h3>
                     <p class="text-gray-600">Configuration d'un système de helpdesk pour gérer les tickets d'incidents informatiques.</p>
-                </div>
-                <div class="bg-white p-6 rounded-lg shadow hover:shadow-lg">
-                    <h3 class="text-xl font-bold text-blue-800 mb-4">Nextcloud</h3>
-                    <p class="text-gray-600">Installation et configuration d'un cloud privé pour le stockage collaboratif sécurisé.</p>
                 </div>
             </div>
         </div>
