--- a/index.html
+++ b/index.html
@@ -5,103 +5,42 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio de Maguette Diop</title>
+  <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    body { font-family: Arial, sans-serif; line-height: 1.6; padding: 20px; background-color: #f9f9f9; color: #333; }
-    h2 { color: #2c3e50; margin-top: 40px; }
-    h3 { color: #34495e; margin-top: 20px; }
-    .btn {
-      display: inline-block;
-      padding: 10px 20px;
-      margin-top: 10px;
-      background-color: #3498db;
-      color: white;
-      text-decoration: none;
-      border-radius: 5px;
-    }
-    ul { margin-left: 20px; }
+    .nav-link.active { color: #0ea5e9; }
+    .nav-link { transition: color 0.3s ease, transform 0.3s ease; }
+    .nav-link:hover { color: #60a5fa; transform: scale(1.05); }
   </style>
 </head>
-<body>
-  <header>
-    <h1>Maguette Diop</h1>
-    <p>Étudiante en BTS SIO option SISR, passionnée par les systèmes, réseaux et les nouvelles technologies.</p>
-    <a href="Cv.pdf" download class="btn">📄 Télécharger mon CV</a>
+<body class="bg-gray-100 text-gray-800">
+  <header class="bg-blue-900 text-white py-16 shadow-lg text-center">
+    <h1 class="text-4xl font-bold">Portfolio de Maguette Diop</h1>
+    <p class="text-lg mt-4">Étudiante en BTS SIO, option SISR</p>
   </header>
+  <nav class="bg-blue-800 text-white sticky top-0 z-50">
+    <div class="container mx-auto flex justify-center space-x-8 py-4">
+      <a href="#about" class="nav-link hover:text-blue-400">À propos</a>
+      <a href="#skills" class="nav-link hover:text-blue-400">Compétences</a>
+      <a href="#certifications" class="nav-link hover:text-blue-400">Certifications</a>
+      <a href="#projects" class="nav-link hover:text-blue-400">Projets</a>
+      <a href="#contact" class="nav-link hover:text-blue-400">Contact</a>
+    </div>
+  </nav>
 
-  <section id="competences">
-    <h2>Compétences</h2>
-
-    <h3>Réseaux & Systèmes</h3>
-    <ul>
-      <li>Création de machines virtuelles (Proxmox, VirtualBox)</li>
-      <li>Installation et configuration de Windows Server 2022</li>
-      <li>Intégration dans un domaine Active Directory</li>
-      <li>Gestion des stratégies de groupe (GPO)</li>
-      <li>Configuration d’adresses IP</li>
-      <li>Utilisation de Cisco Packet Tracer</li>
-    </ul>
-
-    <h3>Linux</h3>
-    <ul>
-      <li>Installation de Debian</li>
-      <li>Commandes de base en ligne de commande</li>
-      <li>Serveur LAMP (Linux, Apache, MySQL, PHP)</li>
-      <li>Gestion d’un serveur LDAP</li>
-    </ul>
-
-    <h3>Développement Web</h3>
-    <ul>
-      <li>HTML / CSS</li>
-      <li>PHP (bases)</li>
-      <li>JavaScript (bases)</li>
-      <li>Python (bases)</li>
-    </ul>
-
-    <h3>Outils & Logiciels</h3>
-    <ul>
-      <li>GLPI (helpdesk et inventaire)</li>
-      <li>Nextcloud (cloud privé)</li>
-      <li>Docker (conteneurs de services)</li>
-    </ul>
-  </section>
-
-  <section id="certifications">
-    <h2>Certifications</h2>
-    <ul>
-      <li><strong>Les bases de l’informatique</strong> – Plateforme Cursa (badge obtenu)</li>
-    </ul>
-  </section>
-
-  <section id="projects">
-    <h2>Projets</h2>
-
-    <h3>Contexte APAEIA – Projet BTS SIO</h3>
-    <p>Projet complet réalisé dans le cadre de ma formation. Ce projet m’a permis de mettre en œuvre une infrastructure système et réseau complète. Voici les missions réalisées :</p>
-    <ul>
-      <li>Audit de l’existant</li>
-      <li>Configuration du serveur Windows Server 2022</li>
-      <li>Intégration d’une machine dans le domaine</li>
-      <li>Partage de ressources et stratégies via GPO</li>
-      <li>Déploiement d’imprimantes avec GPO</li>
-      <li>Helpdesk avec GLPI</li>
-      <li>Inventaire avec l’agent GLPI</li>
-      <li>Cloud privé avec Nextcloud</li>
-    </ul>
-
-    <h3>Projet SISR – Infrastructure virtuelle avec Proxmox et FOG</h3>
-    <p>Dans le cadre de mon projet de groupe SISR, nous avons mis en place une infrastructure virtuelle avec <strong>Proxmox</strong>. Nous avons créé plusieurs machines virtuelles pour simuler un environnement professionnel. Nous avons également intégré <strong>FOG Project</strong> pour automatiser le déploiement des images système, ce qui a permis de simplifier la gestion et la maintenance du parc informatique.</p>
-
-    <h3>Configuration de serveurs Windows 2022</h3>
-    <p>Installation et configuration d’un serveur Windows 2022, gestion des rôles (AD DS, DNS), création d’utilisateurs, et intégration de postes clients dans un domaine.</p>
-
-    <h3>Gestion de partages réseau et stratégies de groupe</h3>
-    <p>Partage de dossiers et lecteurs réseau, configuration de droits d’accès, mise en place de stratégies via les GPO pour sécuriser et standardiser l’environnement utilisateur.</p>
-
-    <h3>Helpdesk et inventaire avec GLPI</h3>
-    <p>Installation et paramétrage de GLPI pour la gestion des incidents et du parc informatique. Utilisation de l’agent GLPI pour remonter automatiquement les informations des machines.</p>
-
-    <h3>Cloud privé avec Nextcloud</h3>
-    <p>Mise en place d’un service de cloud privé avec Nextcloud, permettant le stockage, le partage de fichiers et la synchronisation sécurisée des données sur un réseau local.</p>
+  <section id="about" class="py-16 bg-white">
+    <div class="container mx-auto px-6 text-center">
+      <h2 class="text-3xl font-bold text-blue-900 mb-6">À propos de moi</h2>
+      <p class="text-lg leading-7 text-gray-600">
+        Je m'appelle <strong>Maguette Diop</strong>, et je suis actuellement en première année de BTS Services Informatiques aux Organisations, option SISR (Solutions d'Infrastructure, Systèmes et Réseaux).
+      </p>
+      <p class="mt-4 text-lg leading-7 text-gray-600">
+        Curieuse et passionnée par l'informatique, je me spécialise dans la gestion des infrastructures IT, la sécurité des systèmes et l'administration réseau. Mon objectif : exceller dans ce domaine et apporter des solutions performantes et sécurisées.
+      </p>
+      <div class="mt-8">
+        <a href="Cv.pdf" target="_blank" class="bg-blue-500 text-white py-3 px-6 rounded-full shadow hover:bg-blue-600">Consulter mon CV</a>
+        <a href="Cv.pdf" download class="bg-gray-200 text-blue-500 py-3 px-6 rounded-full shadow ml-4 hover:bg-gray-300">Télécharger mon CV</a>
+      </div>
+    </div>
   </section>
 </body>
 </html>
