--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="bg-gray-50 p-6 rounded-lg shadow hover:shadow-lg">
           <h3 class="text-xl font-bold text-blue-800 mb-4">SecNumAcademie</h3>
           <p class="text-gray-600">Formation en cybersécurité validée par l'ANSSI.</p>
-          <button color = blue>  <a href="image/secnum1.png">Module1</a></button>
+          <button><a href="image/secnum1.png">Module1</a></button>
         </div>
         <div class="bg-gray-50 p-6 rounded-lg shadow hover:shadow-lg">
           <h3 class="text-xl font-bold text-blue-800 mb-4">Cursa</h3>
