--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <h2 class="text-3xl font-bold text-blue-900 mb-12">Mes Certifications</h2>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
         <div class="bg-gray-50 p-6 rounded-lg shadow hover:shadow-lg">
-          <h3 class="text-xl font-bold text-blue-800 mb-4">PIX</h3>
+          <h3 class="text-xl font-bold text-blue-800 mb-4">Cisco</h3>
           <p class="text-gray-600">Certification validant mes compétences numériques dans divers domaines IT.</p>
         </div>
         <div class="bg-gray-50 p-6 rounded-lg shadow hover:shadow-lg">
@@ -109,6 +109,7 @@
       </div>
     </div>
   </section>
+  
 
   <section id="projects" class="py-16 bg-gray-100">
     <div class="container mx-auto px-6 text-center">
