--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
       <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
         <div class="bg-gray-50 p-6 rounded-lg shadow hover:shadow-lg">
           <h3 class="text-xl font-bold text-blue-800 mb-4">Cisco</h3>
-<p class="text-gray-600">Badge obtenu pour la formation “Les premiers pas avec Cisco” validant les bases des réseaux et de la cybersécurité.</p>
+          <p class="text-gray-600">Badge obtenu pour la formation “Les premiers pas avec Cisco” validant les bases des réseaux et de la cybersécurité.</p>
+        </div>
         <div class="bg-gray-50 p-6 rounded-lg shadow hover:shadow-lg">
           <h3 class="text-xl font-bold text-blue-800 mb-4">SecNumAcademie</h3>
           <p class="text-gray-600">Formation en cybersécurité validée par l'ANSSI.</p>
@@ -107,8 +108,8 @@
       </div>
     </div>
   </section>
-  
 
+  
   <section id="projects" class="py-16 bg-gray-100">
     <div class="container mx-auto px-6 text-center">
       <h2 class="text-3xl font-bold text-blue-900 mb-12">Mes projets</h2>
