--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <a href="#skills" class="nav-link hover:text-blue-400">Compétences</a>
       <a href="#certifications" class="nav-link hover:text-blue-400">Certifications</a>
       <a href="#projects" class="nav-link hover:text-blue-400">Projets</a>
+      <a href="#Veille" class="nav-link hover:text-blue-400">Veille</a>
       <a href="#contact" class="nav-link hover:text-blue-400">Contact</a>
     </div>
   </nav>
@@ -110,6 +111,7 @@
       </div>
     </div>
   </section>
+
   
   
   <section id="projects" class="py-16 bg-gray-100">
@@ -148,6 +150,50 @@
       </div>
     </div>
   </section>
+
+  <section id="veille" class="py-16 bg-gray-100">
+    <div class="container mx-auto px-6 text-center">
+      <h2 class="text-3xl font-bold text-blue-900 mb-12">Veille technologique</h2>
+      <p class="text-gray-700 mb-6 text-lg">
+        Mon sujet de veille porte sur <strong>la sécurité dans les réseaux Wi-Fi en entreprise</strong>. 
+        Voici quelques articles récents qui montrent l’évolution de cette thématique et les bonnes pratiques à adopter.
+      </p>
+  
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-6 text-left">
+        <div class="bg-white p-6 rounded-lg shadow hover:shadow-lg">
+          <h3 class="text-xl font-bold text-blue-800">🔐 Sécuriser un réseau Wi-Fi d’entreprise : les fondamentaux</h3>
+          <p class="text-gray-600">Les bases pour sécuriser un réseau professionnel : mot de passe WPA3, segmentation, firewall, etc.</p>
+          <a href="https://www.lemondeinformatique.fr/actualites/lire-securiser-un-reseau-wifi-d-entreprise-les-bases-89789.html" target="_blank" class="text-blue-600 underline">Lire l’article</a>
+        </div>
+  
+        <div class="bg-white p-6 rounded-lg shadow hover:shadow-lg">
+          <h3 class="text-xl font-bold text-blue-800">📶 Les attaques Wi-Fi les plus fréquentes en 2024</h3>
+          <p class="text-gray-600">Un article qui recense les nouvelles formes d’attaques ciblant les réseaux sans fil (Evil Twin, KRACK, etc.).</p>
+          <a href="https://www.zdnet.fr/actualites/wifi-les-attaques-les-plus-dangereuses-en-2024-39968451.htm" target="_blank" class="text-blue-600 underline">Lire l’article</a>
+        </div>
+  
+        <div class="bg-white p-6 rounded-lg shadow hover:shadow-lg">
+          <h3 class="text-xl font-bold text-blue-800">🛡️ Bonnes pratiques de configuration d’un Wi-Fi pro</h3>
+          <p class="text-gray-600">Ce guide explique comment bien configurer les bornes Wi-Fi d’une entreprise pour éviter les failles de sécurité.</p>
+          <a href="https://www.developpez.com/actu/326951" target="_blank" class="text-blue-600 underline">Lire l’article</a>
+        </div>
+  
+        <div class="bg-white p-6 rounded-lg shadow hover:shadow-lg">
+          <h3 class="text-xl font-bold text-blue-800">📡 Séparer le Wi-Fi invité et le Wi-Fi entreprise</h3>
+          <p class="text-gray-600">Pourquoi il est essentiel de ne pas mélanger les accès Wi-Fi : sécurité, surveillance, et risques de propagation.</p>
+          <a href="https://www.lebigdata.fr/securite-wifi-reseaux-separes" target="_blank" class="text-blue-600 underline">Lire l’article</a>
+        </div>
+  
+        <div class="bg-white p-6 rounded-lg shadow hover:shadow-lg">
+          <h3 class="text-xl font-bold text-blue-800">🔍 Outils de surveillance des réseaux Wi-Fi</h3>
+          <p class="text-gray-600">Un article qui présente des outils comme Wireshark, Aircrack-ng pour surveiller ou auditer un réseau sans fil.</p>
+          <a href="https://korben.info/outils-securite-wifi-entreprise.html" target="_blank" class="text-blue-600 underline">Lire l’article</a>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+
 
   <section id="contact" class="py-16 bg-gray-100">
     <div class="container mx-auto px-6 text-center">
