--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <a href="#skills" class="nav-link hover:text-blue-400">Compétences</a>
       <a href="#certifications" class="nav-link hover:text-blue-400">Certifications</a>
       <a href="#projects" class="nav-link hover:text-blue-400">Projets</a>
-      <a href="#Veille" class="nav-link hover:text-blue-400">Veille</a>
+      <a href="#veille" class="nav-link hover:text-blue-400">Veille</a>
       <a href="#contact" class="nav-link hover:text-blue-400">Contact</a>
     </div>
   </nav>
