--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     </div>
   </section>
 
-  <section id="veille" class="py-16 bg-gray-100">
+  <section id="veille" class="py-16 bg-white">
     <div class="container mx-auto px-6 text-center">
       <h2 class="text-3xl font-bold text-blue-900 mb-12">Veille technologique</h2>
       <p class="text-gray-700 mb-6 text-lg">
